# allegro5-cmake

./: CMakeLists.txt  CONTRIBUTING.md  README.md
patches/: allegro.patch
